--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -2,11 +2,12 @@
 {% block content %}
     <div class = "login-box">
         {% if error %}<div class="error"><strong>Success:</strong> {{ error }}</div><br>{% endif %}
-        {% if new is none and prediction is not none%}
+        <!--check if statement-->
+        {% if prediction is not none%}
         <h1>Prediction:</h1>
        <div class = "error">
-               <p> AudioBoard predicted your #{{current}} Waveform </p>
-               <p>{{prediction}}</p>
+               <p> AudioBoard predicted your #{{index}} Waveform to be:</p>
+               <p>"{{prediction}}"</p>
                <p> Is this correct?</p>
                 <form method = "post" action ="">
                     <br>
@@ -18,12 +19,13 @@
         {%else%}
         <h1 class = "error">Click Button Below to fetch new prediction once data has been sent:</h1>
         <br>
-        <form action="">
+        <form method="GET">
             <input type="submit" value="Get Prediction" />
         </form>
         {%endif%}
     </div>
 
     <!--We want to continously poll on this page-->
+    <!--Button onClick, refresh page?-->
 
 {% endblock %}
