--- a/static/style.css
+++ b/static/style.css
@@ -60,6 +60,36 @@ body{
     padding: 70px 30px;
 }
 
+.waveform-display{
+    width: 320px;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    top: 57.5%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+
+
+}
+.waveform-analysis-display{
+    width: 320px;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    top: 57.5%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+
+
+
+}
+
 .avatar{
     width: 100px;
     height: 100px;
